--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/MainWindow.xaml
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/MainWindow.xaml
@@ -2,13 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Main Window" Height="350" Width="525"
-        DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
-        <!--DataContext="{Binding Source={StaticResource Locator}, Path=MainViewModel}">-->
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Button Content="Request Test" Grid.Row="1" FontSize="30" FontWeight="Bold" Command="{Binding TestRequest}"/>
-    </Grid>
+        DataContext="{Binding Source={StaticResource Locator}, Path=MainWindowViewModel}">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_Main" Command="{Binding DisplayMainView}"></MenuItem>
+            <MenuItem Header="_Settings" Command="{Binding DisplayTestView}"></MenuItem>
+        </Menu>
+        <ContentControl Content="{Binding CurrentViewModel}" />
+    </DockPanel>
 </Window>
