--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/App.xaml
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/App.xaml
@@ -1,4 +1,21 @@
-﻿<Application x:Class="DonkeySuite.DesktopMonitor.Wpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+﻿<!--
+<copyright file="App.xaml">
+   Copyright 2015 MadDonkey Software
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+</copyright>
+-->
+<Application x:Class="DonkeySuite.DesktopMonitor.Wpf.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              StartupUri="MainWindow.xaml"
              d1p1:Ignorable="d"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
