Basic navigation demo now working.

--- a/source/app/DonkeySuite.DesktopMonitor.Wpf/MainWindow.xaml
+++ b/source/app/DonkeySuite.DesktopMonitor.Wpf/MainWindow.xaml
@@ -23,7 +23,7 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_Main" Command="{Binding DisplayMainView}"></MenuItem>
-            <MenuItem Header="_Settings" Command="{Binding DisplayTestView}"></MenuItem>
+            <MenuItem Header="_Settings" Command="{Binding DisplaySettingsView}"></MenuItem>
         </Menu>
         <ContentControl Content="{Binding CurrentViewModel}" />
     </DockPanel>
